# yanshu

./: .gitignore  LICENSE  Makefile  README.md  VERSION_UPDATE.md  agno.db  crawl_xiaohongshu.py  go.mod  makefile  pyproject.toml  state_agent.py
agent/: .air.toml  .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.Docker.md  README.md  config.yaml.example  docker-compose.yml  env.example  go.mod
agent/cmd/: agent.go
baby_food_recipes/: recipes.json  菜谱大全.md
baby_food_recipes/recipes/: 01_8月龄宝宝一周辅食🥣，简单易做❗️.md  02_🔥宝宝吃饭不用愁，一周营养烩饭安排～.md  03_不重样宝宝营养粥✔️附做法.md  04_一岁之内宝宝饮食禁忌.md  05_9m+无蛋版❗️手指条|软糯好咀嚼|敏宝也能吃.md  06_宝宝秋天猛涨期的营养食谱.md  07_超简单苹果松饼，零失败！！.md  08_软饭这样吃，宝宝长胖胖👶｜烩饭一锅出.md  09_一周不重样碎碎面，宝宝吃着超满足‼️.md  10_宝宝辅食：9道宝宝超爱吃的蒸菜🍲.md  11_11月龄22斤宝宝一周辅食清单.md  12_宝宝超爱吃的手指食物辅食做法！快安排上！.md  13_8-9月龄✨一周手指条不重样，营养好吃宝宝爱.md  22d9fe30b452_超简单苹果松饼，零失败！！.md  25c814f081d7_健脾养胃的山药芙蓉羹｜做法简单营养美味💯.md  3ccbdf0a99f1_8-9月龄✨一周手指条不重样，营养好吃宝宝爱.md  40731e520986_8月龄宝宝一周辅食🥣，简单易做❗️.md  42e46fbe69dc_🔥宝宝吃饭不用愁，一周营养烩饭安排～.md
client/web/: .dockerignore  .gitignore  .npmrc  Caddyfile.docker  Dockerfile  Dockerfile.dev  QUICKSTART.md  README.Docker.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
docker-compose/: README.md
docker-compose/ai-observability/: docker-compose.yml  litellm_config.yaml
docker-compose/caddy/: .gitignore  Caddyfile  README.md  docker-compose.full.yml  docker-compose.yml
docker-compose/temporal/: README.md  docker-compose.yml
docs/: CONFIG_GUIDE.md  README.md  REORGANIZATION_2026-01-22.md  SECURITY.md
(+39 files in other folders)
