[project]
name = "yanshu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.8",
    "anthropic>=0.75.0",
    "chromium>=0.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.0",
    "google-genai>=1.54.0",
    "httpx>=0.27.0",
    "mcp>=1.23.2",
    "newspaper4k>=0.9.4.1",
    "openai>=2.9.0",
    "playwright>=1.49.0",
    "sqlalchemy>=2.0.44",
    "traceloop-sdk>=0.49.8",
]
